--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,176 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
 @import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+
+:root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+
+
+/* --------  timer  ------ */
+
+.input-timer {
+  width: 266px;
+  height: 36px;
+  border-radius: 4px;
+  background: #FFF;
+  border: 1px solid #808080;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-timer:hover {
+  border: 1px solid #000000;
+}
+
+
+.btn-timer {
+  display: flex;
+  padding: 8px 16px;
+  width: 75px;
+  max-height: 40px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #0e0a0a;
+  border-radius: 8px;
+  color: #0e0a0a;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+ 
+}
+
+
+.div-input {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.section-timer {
+  display: flex;
+  min-width: 335px;
+  height: 496px;
+  padding: 36px 929px 316px 156px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+.timer {
+  display: flex;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+}
+
+.label {
+  text-transform: uppercase;
+}
+
+
+
+/* ----------------Snackbar-------------- */
+
+
+
+.form {
+  display: flex;
+  flex-direction: column;
+  max-width: 360px;
+}
+
+fieldset {
+  display: flex;
+  gap: 48px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  margin-bottom: 24px;
+}
+
+legend {
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.fieldset-label {
+  float: left;
+  clear: none;
+  display: block;
+}
+
+input[type='radio'] {
+  float: left;
+  clear: none;
+  margin-right: 8px;
+  border: 1px solid #757575;
+  border-radius: 14px;
+  width: 20px;
+  height: 20px;
+}
+
+.submit-btn {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color:#0e0a0a;
+  border: 1px solid #808080;
+}
+
+.submit-btn:hover:active:focus {
+  border: #0e0a0a;
+}
+
+.delay-label {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.delay-input {
+  margin-top: 8px;
+  padding-left: 12px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 340px;
+  height: 40px;
+}
